--- a/LeoFlix/Views/Movies/Create.cshtml
+++ b/LeoFlix/Views/Movies/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="OriginalTitle" class="control-label"></label>
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Synopsis" class="control-label"></label>
-                <input asp-for="Synopsis" class="form-control" />
+                <textarea asp-for="Synopsis" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="Synopsis" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -44,8 +44,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" class="form-control" />
-                <span asp-validation-for="Image" class="text-danger"></span>
+                <input type="hidden" />
+                <img id="Preview" src="" class="w-100 img-fluid">
+                <input type="file" name="arquivo" id="arquivo" class="form-control" accept=".jpg, .jpeg, .png, .gif, .jfif, .svg">
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -58,3 +59,17 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+@section Scripts
+{
+    <script>
+        window.addEventListener('load', function() {
+            document.querySelector("input[type='file']")
+                .addEventListener('change', function() {
+                    if (this.files && this.files[0]) {
+                        var img = document.getElementById('Preview');
+                        img.src = URL.createObjectURL(this.files[0]);
+                    }
+                })
+        })
+    </script>
+}
