colocando as imagens

--- a/LeoFlix/Views/Home/Index.cshtml
+++ b/LeoFlix/Views/Home/Index.cshtml
@@ -7,7 +7,19 @@
     <h1 class="display-4">LeoFlix</h1>
 </div>
 
-@foreach (var movie in Model)
-{
-    <p>@movie.Title - @movie.OriginalTitle</p>
-}
+<div class="contaienr-fluid">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3">
+        @foreach (var movie in Model)
+        {
+            <div class="col">
+                <div class="card shadow-sm cursor-pointer">
+                    <img src="@movie.Image" class="card-img-top" alt="@movie.Title" width="100%" height="300" />
+                    <div class="card-body">
+                        <h5 class="card-title">@movie.Title</h5>
+                        <p>@string.Join(", ", movie.Genres.Select(mv => mv.Genre.Name))</p>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</div>
