--- a/LeoFlix/Views/Movies/Edit.cshtml
+++ b/LeoFlix/Views/Movies/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -45,8 +45,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" class="form-control" />
-                <span asp-validation-for="Image" class="text-danger"></span>
+                <input type="hidden" asp-for="Image" />
+                <img id="Preview" src="@Model.Image" class="w-100 img-fluid">
+                <input type="file" id="arquivo" name="arquivo" class="form-control" accept=".jpg, .jpeg, .png, .gif. jfif, .svg">
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -58,4 +59,19 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+@section Scripts
+{
+    <script>
+        window.addEventListener('load', function() {
+            document.querySelector("input[type='file']")
+                .addEventListener('change', function() {
+                    if (this.files && this.files[0]) {
+                        var img = document.getElementById('Preview');
+                        img.src = URL.createObjectURL(this.files[0]);
+                    }
+                })
+        });
+    </script>
+}
 
